# comfyui_controlnet_aux

./: .gitignore  README.md  UPDATES.md  __init__.py  a.py  config.example.yaml  config.yaml  dev_interface.py  hint_image_enchance.py  install.bat  install.sh  log.py  lvminthin.py  pyproject.toml  requirements.txt  search_hf_assets.py  test.ipynb  utils.py
example_workflows/: controlnet-Unified-Loader-image.json  controlnet-Unified-Loader.json
node_wrappers/: anime_face_segment.py  anyline.py  bae.py  binary.py  canny.py  color.py  densepose.py  depth_anything.py  depth_anything_v2.py  diffusion_edge.py  diffusion_edge_loader.py  dsine.py  dwpose.py  edpf.py  hed.py  inpaint.py  leres.py  lineart.py  lineart_anime.py  lineart_standard.py  manga_line.py  mediapipe_face.py  mesh_graphormer.py  metric3d.py  midas.py  mlsd.py  normalbae.py  oneformer.py  openpose.py  pidinet.py  pose_keypoint_postprocess.py  pyracanny.py  raft.py  recolor.py  scribble.py  segment_anything.py  shuffle.py  simple_cv2.py  teed.py  tile.py  (+3 more)
oneformer/: __init__.py  api.py
oneformer/detectron2/config/: __init__.py  defaults.py  instantiate.py
oneformer/detectron2/data/: detection_utils.py
oneformer/detectron2/engine/: defaults.py  launch.py
oneformer/detectron2/evaluation/: cityscapes_evaluation.py  coco_evaluation.py  evaluator.py  fast_eval_api.py
oneformer/detectron2/export/: c10.py  torchscript.py
oneformer/detectron2/layers/: deform_conv.py
oneformer/detectron2/modeling/: __init__.py  anchor_generator.py  box_regression.py  postprocessing.py
oneformer/detectron2/solver/: build.py
oneformer/detectron2/structures/: masks.py  rotated_boxes.py
oneformer/detectron2/tracking/: base_tracker.py  (+1 more)
oneformer/oneformer/: config.py
oneformer/oneformer/data/: build.py
oneformer/pycocotools/: coco.py
provisioning_scripts_vast/: comfyui_kontext.sh
src/: __init__.py
src/controlnet_aux/: __init__.py  processor.py  util.py
src/custom_controlnet_aux/: processor.py  util.py
src/custom_manopth/: CHANGES.md  __init__.py  argutils.py  demo.py  manolayer.py  posemapper.py  rodrigues_layer.py  rot6d.py  rotproj.py  smpl_handpca_wrapper_HAND_only.py  tensutils.py  verts.py
src/custom_midas_repo/: hubconf.py
src/custom_mmpkg/: __init__.py
src/custom_oneformer/: config.py  oneformer_model.py
src/custom_pycocotools/: coco.py  mask.py
src/custom_qudida/: LICENSE  __init__.py
src/wrapper_for_mps/: __init__.py
tests/: test_cn_aux_full.json  test_cn_aux_workflow.json  test_controlnet_aux.py
web/: examples.json  index.css  index.js
(+961 files in other folders)
